# jarvis-45platform

./: LICENSE  README.md  RELEASE_NOTES_v3.0.1.md  build_20_clean.json  build_20_raw.json  extract_analysis.py  extract_build_20.py  extract_builds.py  extract_json.py  extract_release.py  extract_server_from_json.py  find_json.py  jarvis_analysis.json  next_steps.json  pyproject.toml  release_3.0.1.json  requirements.txt  run_compiler_test.py  run_daemon.py  run_discovery.py  run_orchestrator.py  run_server.py  run_web.py  setup.cfg  test_server.py
.github/workflows/: ci.yml  release.yml
Instruction/: 1  10  11  12  13  14  15  16  17  18  19  2  20  3  4  5  6  7  8  9
core/compiler/: bytecode.py  cache.py  optimizer.py
core/daemon/: listener.py
core/engine/: interpreter.py  jit.py
core/framework/: output.py
core/life/: autonomy.py  goals.py  scheduler.py
core/metacontrol/: evolve.py  memory.py  optimizer.py  vectorizer.py
core/network/: client.py  discovery.py  server.py
core/orchestrator/: delegator.py  distributed.py  engine.py
core/physics/: actuators.py  sensors.py
tests/: test_compiler.py  test_core_engine.py  test_network.py  test_physics.py  test_web.py
web/: app.py
web/static/: script.js  style.css
web/templates/: compiler.html  index.html  memory.html  nodes.html  tasks.html
